// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders EuiColorPicker 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:rgb(255,238,221)"
        >
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="euiColorPickerAnchor test subject string"
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="swatchInput"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders EuiColorPicker with a clearable input 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:rgb(255,238,221)"
        >
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="euiColorPickerAnchor test subject string"
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="swatchInput"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Clear input"
            class="euiFormControlLayoutClearButton"
            type="button"
          >
            <span
              class="euiFormControlLayoutClearButton__icon"
              data-euiicon-type="cross"
            />
          </button>
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders EuiColorPicker with a color swatch when color is defined 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:rgb(255,255,255)"
        >
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="euiColorPickerAnchor test subject string"
                type="text"
                value="#FFFFFF"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="swatchInput"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders EuiColorPicker with a custom placeholder 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div>
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="euiColorPickerAnchor test subject string"
                placeholder="Auto"
                type="text"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="stopSlash"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders EuiColorPicker with an empty swatch when color is "" 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div>
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="euiColorPickerAnchor test subject string"
                placeholder="Transparent"
                type="text"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="stopSlash"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders EuiColorPicker with an empty swatch when color is null 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div>
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="euiColorPickerAnchor test subject string"
                placeholder="Transparent"
                type="text"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="stopSlash"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a EuiColorPicker with a prepend and append 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout euiFormControlLayout--group"
    >
      <label
        class="euiFormLabel euiFormControlLayout__prepend"
      >
        prepend
      </label>
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:rgb(255,238,221)"
        >
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiColorPicker__input--inGroup euiFieldText--withIcon"
                data-test-subj="euiColorPickerAnchor test subject string"
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="swatchInput"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
      <label
        class="euiFormLabel euiFormControlLayout__append"
      >
        append
      </label>
    </div>
  </div>
</div>
`;

exports[`renders a EuiColorPicker with an alpha range selector 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:rgb(255,238,221)"
        >
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="euiColorPickerAnchor test subject string"
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="swatchInput"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders compressed EuiColorPicker 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout euiFormControlLayout--compressed"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:rgb(255,238,221)"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon euiFieldText--compressed"
                data-test-subj="euiColorPickerAnchor test subject string"
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="swatchInput"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders disabled EuiColorPicker 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:rgb(255,238,221)"
        >
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="euiColorPickerAnchor test subject string"
                disabled=""
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="swatchInput"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders fullWidth EuiColorPicker 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout euiFormControlLayout--fullWidth"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:rgb(255,238,221)"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon euiFieldText--fullWidth"
                data-test-subj="euiColorPickerAnchor test subject string"
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="swatchInput"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="arrowDown"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders inline EuiColorPicker 1`] = `
<div
  class="euiColorPicker testClass1 testClass2"
>
  <div>
    <div
      aria-activedescendant="undefined-saturationIndicator"
      aria-describedby="undefined-saturationDescription"
      aria-roledescription="HSV color mode saturation and value selection"
      class="euiSaturation"
      data-test-subj="euiSaturation"
      role="application"
      style="background:hsl(30, 100%, 50%)"
      tabindex="0"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Use the arrow keys to navigate the square color gradient. The coordinates resulting from each key press will be used to calculate HSV color mode 'saturation' and 'value' numbers, in the range of 0 to 1. Left and right decrease and increase (respectively) the 'saturation' value. Up and down decrease and increase (respectively) the 'value' value.
      </p>
      <p
        aria-live="polite"
        class="euiScreenReaderOnly"
      >
        #ffeedd
      </p>
      <div
        class="euiSaturation__lightness"
      >
        <div
          class="euiSaturation__saturation"
        />
      </div>
      <div
        class="euiSaturation__indicator"
        id="undefined-saturationIndicator"
        style="left:0;top:0"
      />
    </div>
    <label
      class="euiScreenReaderOnly"
      for="undefined-hue"
    >
      Select the HSV color mode 'hue' value
    </label>
    <p
      aria-live="polite"
      class="euiScreenReaderOnly"
    >
      #ffeedd
    </p>
    <div
      class="euiHue"
    >
      <input
        class="euiHue__range"
        id="undefined-hue"
        max="359"
        min="0"
        step="1"
        type="range"
        value="30"
      />
    </div>
  </div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--wrap"
    role="listbox"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #54B399 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:rgb(84,179,153)"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #6092C0 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:rgb(96,146,192)"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #D36086 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:rgb(211,96,134)"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #9170B8 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:rgb(145,112,184)"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #CA8EAE as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:rgb(202,142,174)"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #D6BF57 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:rgb(214,191,87)"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #B9A888 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:rgb(185,168,136)"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #DA8B45 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:rgb(218,139,69)"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #AA6556 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:rgb(170,101,86)"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #E7664C as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:rgb(231,102,76)"
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`renders readOnly EuiColorPicker 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout euiFormControlLayout--readOnly"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:rgb(255,238,221)"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="euiColorPickerAnchor test subject string"
                readonly=""
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="swatchInput"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
